--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "ttlibjsgyp2": "github:taktod/ttLibJsGyp2"
   },
   "devDependencies": {
-    "@types/electron": "^1.6.10",
     "@types/node": "^7.0.27",
     "@types/react": "^15.0.27",
     "@types/react-bootstrap": "0.0.50",
     "@types/react-dom": "^15.5.0",
+    "electron": "1.6.11",
     "takcast.interface": "github:taktod/takcast.interface",
     "typescript": "^2.3.4"
   }
